--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,11 +16,17 @@
         <activity
             android:name="com.example.myhealth.MainActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.example.myhealth.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        >
         </activity>
     </application>
 
