--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,7 @@
             android:name="com.example.myhealth.MainActivity"
             android:label="@string/app_name" >
         </activity>
+     
         <activity
             android:name="com.example.myhealth.LoginActivity"
             android:label="@string/title_activity_login"
@@ -26,8 +27,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        >
-        </activity>
+        
+         </activity> 		  <activity android:name="com.example.myhealth.Menu_Activity"></activity>
+        <activity android:name="com.example.myhealth.Measurements"></activity>
+        <activity android:name="com.example.myhealth.UrineTest"></activity>
+        <activity android:name="com.example.myhealth.Device"></activity>
+       
     </application>
 
 </manifest>
