--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -29,5 +29,7 @@
         >
         </activity>
     </application>
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
