--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,5 +34,7 @@
         <activity android:name="com.example.myhealth.Device"></activity>
        
     </application>
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
