--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,10 @@
         android:minSdkVersion="9"
         android:targetSdkVersion="17" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -17,7 +21,6 @@
             android:name="com.example.myhealth.MainActivity"
             android:label="@string/app_name" >
         </activity>
-     
         <activity
             android:name="com.example.myhealth.LoginActivity"
             android:label="@string/title_activity_login"
@@ -27,14 +30,19 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        
-         </activity> 		  <activity android:name="com.example.myhealth.Menu_Activity"></activity>
-        <activity android:name="com.example.myhealth.Measurements"></activity>
-        <activity android:name="com.example.myhealth.UrineTest"></activity>
-        <activity android:name="com.example.myhealth.Device"></activity>
-       
+        </activity>
+        <activity android:name="com.example.myhealth.Menu_Activity" >
+        </activity>
+        <activity android:name="com.example.myhealth.Measurements" >
+        </activity>
+        <activity android:name="com.example.myhealth.UrineTest" >
+        </activity>
+        <activity android:name="com.example.myhealth.Device" >
+        </activity>
+        <activity
+            android:name="com.example.myhealth.BloodPressure"
+            android:label="@string/title_activity_blood_pressure" >
+        </activity>
     </application>
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
