--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,5 +36,7 @@
     </application>
     
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
 </manifest>
